update agent to be async
